# aqt-stock-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  USAGE.md  aqt-manager.sh  log4rs.yaml
.lingma/rules/: project_rule.md
src/: lib.rs  main.rs
src/calculates/: base_calculate.rs  cyc_calculate.rs  kdj_calculate.rs  macd_calculate.rs  market_calculate.rs  mod.rs  stc_calculate.rs  technicals_calculate.rs  utbot_calculate.rs
src/collect/: brokers.rs  collector.rs  depth.rs  mod.rs  quote.rs  trade.rs
src/computes/: calculate.rs  defult_rules.rs  mod.rs
src/config/: config.rs
src/indicators/: candle.rs  cyc.rs  kdj.rs  macd.rs  mod.rs  schaff_trend_cycle.rs  tradingview_technicals.rs  utbot.rs
src/models/: market.rs  mod.rs  stock.rs  symbol_time.rs
src/services/: service.rs
src/strategys/: executor.rs  gconsts.rs  mod.rs  strategy.rs  vecor_v1.rs
src/tasks/: mod.rs  sty.rs
tests/: kdj_test.rs  macd_test.rs  stc_test.rs  utbot_test.rs  vecor_executor_test.rs  websocket_test.rs
