[package]
name = "aqt_stock"
version = "0.1.0"
edition = "2021"

[dependencies]
longport = "3.0.5"
tokio = { version = "1.18.2", features = [
    "time",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
] }
tokio-tungstenite = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
log4rs = "0.11.0"
toml = "0.8.20"
serde_yaml = "0.9"
time = "0.3"
strum_macros = "0.24.3"

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
