[package]
name = "aqt_stock"
version = "0.1.0"
edition = "2021"

[dependencies]
longport = "3.0.7"
tokio = { version = "1.18.2", features = [
    "time",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
] }
tokio-tungstenite = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
log = "0.4"
log4rs = "1.3.0"
toml = "0.8.20"
serde_yaml = "0.9"
time = "0.3"
strum_macros = "0.27.1"
dotenv = "0.15"
ta = "0.5"
reqwest = "0.12.20"
moka = { version = "0.12.10", features = ["sync"] }
once_cell = "1.19"
[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
